--- a/lang/erlang/Makefile.versions
+++ b/lang/erlang/Makefile.versions
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.versions,v 1.24 2016/10/02 10:12:36 fhajny Exp $
+# $NetBSD: Makefile.versions,v 1.25 2016/12/17 13:06:18 rillig Exp $
 
 DIST_VERSION_MAJOR=		19
 DIST_VERSION_MINOR=		1
@@ -62,11 +62,11 @@ PLIST_SUBST+=	VERSION.${name}=${version}
 .endfor
 
 # Generate PLIST
-.for _pkg_ _version_ in $(_VERSIONS)
-PRINT_PLIST_AWK+=	{if ($$0 ~ /\/$(_pkg_)-$(_version_)\//) {sub(/\/$(_pkg_)-$(_version_)\//,"/$(_pkg_)-$${VERSION.$(_pkg_)}/", $$0);}}
+.for pkg version in ${_VERSIONS}
+PRINT_PLIST_AWK+=	{if ($$0 ~ /\/${pkg}-${version}\//) {sub(/\/${pkg}-${version}\//,"/${pkg}-$${VERSION.${pkg}}/", $$0);}}
 # documentation:
-PRINT_PLIST_AWK+=	{gsub(/\/$(_pkg_)-$(_version_)\.pdf/,"/$(_pkg_)-$${VERSION.$(_pkg_)}.pdf", $$0);}
+PRINT_PLIST_AWK+=	{gsub(/\/${pkg}-${version}\.pdf/,"/${pkg}-$${VERSION.${pkg}}.pdf", $$0);}
 .endfor
 PRINT_PLIST_AWK+=	{if ($$0 ~ /\/releases\/${DIST_VERSION_MAJOR}\//) {sub(/\/releases\/${DIST_VERSION_MAJOR}\//,"/releases/$${VERSION}/", $$0);}}
 # documentation:
-PRINT_PLIST_AWK+=	{gsub(/\/otp-system-documentation-$(VERSION.erts)\.pdf/,"/otp-system-documentation-$${VERSION.erts}.pdf", $$0);}
+PRINT_PLIST_AWK+=	{gsub(/\/otp-system-documentation-${VERSION.erts}\.pdf/,"/otp-system-documentation-$${VERSION.erts}.pdf", $$0);}
