--- a/x11/kdelibs4/Makefile
+++ b/x11/kdelibs4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.86 2016/10/07 18:25:36 adam Exp $
+# $NetBSD: Makefile,v 1.87 2016/12/17 14:19:27 joerg Exp $
 
 DISTNAME=	kdelibs-4.14.15
 PKGNAME=	${DISTNAME:S/-4/4-4/}
@@ -88,6 +88,9 @@ PLIST.kgrantpty=	yes
 
 CFLAGS.SunOS+=		-D__EXTENSIONS__
 LDFLAGS.SunOS+=		-lintl
+
+# jasper uses SIZE_MAX and friends in its headers.
+CXXFLAGS+=	-D__STDC_LIMIT_MACROS
 
 BUILDLINK_DEPMETHOD.qt4-tools=		full
 .include "../../meta-pkgs/kde4/kde4.mk"
