--- a/games/ccgo/Makefile
+++ b/games/ccgo/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.56 2016/08/03 10:22:45 adam Exp $
+# $NetBSD: Makefile,v 1.57 2016/12/17 23:22:30 joerg Exp $
 
-DISTNAME=	ccgo-0.3.6.3
-PKGREVISION=	24
+DISTNAME=	ccgo-0.3.6.5
 CATEGORIES=	games
 MASTER_SITES=	http://ccdw.org/~cjj/prog/ccgo/src/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://ccdw.org/~cjj/prog/ccgo/
 COMMENT=	Go board with IGS and gnugo interface
+LICENSE=	gnu-gpl-v3
 
 DEPENDS+=	gnugo>=3.4:../../games/gnugo
 
@@ -21,6 +21,10 @@ SUBST_STAGE.ccgo=	pre-configure
 SUBST_FILES.ccgo=	game_setup.cc settings.cc
 SUBST_MESSAGE.ccgo=	Fixing paths to gnugo.
 SUBST_SED.ccgo=		-e 's|/usr/games/gnugo|${LOCALBASE}/bin/gnugo|g'
+
+.include "../../mk/bsd.prefs.mk"
+
+CXXFLAGS+=	-std=c++11
 
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/gconfmm/buildlink3.mk"
