--- a/ham/xlog/Makefile
+++ b/ham/xlog/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.67 2016/08/03 10:22:58 adam Exp $
+# $NetBSD: Makefile,v 1.68 2016/12/18 06:00:46 mef Exp $
 #
 
-DISTNAME=	xlog-2.0.13
-PKGREVISION=	2
+DISTNAME=	xlog-2.0.14
 CATEGORIES=	ham
 MASTER_SITES=	http://download.savannah.gnu.org/releases/xlog/
 LICENSE=	gnu-gpl-v3
@@ -27,6 +26,7 @@ CWRAPPERS_APPEND.cc+=	-Wno-error=parentheses-equality -Wno-error=tautological-co
 .endif
 
 .include "../../databases/shared-mime-info/buildlink3.mk"
+.include "../../graphics/gnome-icon-theme/buildlink3.mk"
 .include "../../ham/hamlib/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../print/libgnomeprint/buildlink3.mk"
