--- a/misc/ansiweather/Makefile
+++ b/misc/ansiweather/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.4 2016/06/09 06:23:40 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2016/12/18 18:57:05 maya Exp $
 
-DISTNAME=	ansiweather-1.06
+DISTNAME=	ansiweather-1.09
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=fcambus/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/fcambus/ansiweather/
 COMMENT=	Display current weather conditions in your terminal
-LICENSE=	modified-bsd
+LICENSE=	2-clause-bsd
 
 USE_LANGUAGES=	# none
 
@@ -35,7 +35,7 @@ AUTO_MKDIRS=	yes
 
 do-install:
 	${RUN}${INSTALL_PROGRAM} ${WRKSRC}/ansiweather ${DESTDIR}${PREFIX}/bin
-.for f in AUTHORS ChangeLog README.md ansiweather.plugin.zsh
+.for f in AUTHORS ChangeLog README.md ansiweather.plugin.zsh ansiweather.1
 	${RUN}${INSTALL_DATA} ${WRKSRC}/${f} ${DESTDIR}${PREFIX}/${DOCDIR}
 .endfor
 	${RUN}${INSTALL_DATA} ${WRKSRC}/ansiweatherrc.example \
