--- a/devel/bglibs/Makefile
+++ b/devel/bglibs/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2016/07/09 06:38:05 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2016/12/18 21:39:58 joerg Exp $
 #
 
 DISTNAME=		bglibs-1.106
-PKGREVISION=		5
+PKGREVISION=		6
 CATEGORIES=		devel
 MASTER_SITES=		${HOMEPAGE}
 
