--- a/net/kopete/Makefile
+++ b/net/kopete/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2016/12/04 05:17:37 ryoon Exp $
+# $NetBSD: Makefile,v 1.26 2016/12/18 21:53:31 joerg Exp $
 
 DISTNAME=	kopete-15.12.0
 PKGREVISION=	4
@@ -25,6 +25,9 @@ REPLACE_PERL+= \
 REPLACE_SH+= \
 	protocols/winpopup/winpopup-install \
 	protocols/winpopup/winpopup-send
+
+# jasper uses SIZE_MAX and friends in its headers.
+CXXFLAGS+=	-D__STDC_LIMIT_MACROS
 
 .include "../../meta-pkgs/kde4/kde4.mk"
 
