--- a/pkgtools/pbulk/files/pbulk/pbulk.conf
+++ b/pkgtools/pbulk/files/pbulk/pbulk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: pbulk.conf,v 1.23 2016/12/18 22:38:16 joerg Exp $
+# $NetBSD: pbulk.conf,v 1.24 2016/12/18 22:59:35 joerg Exp $
 
 # Version of the configuration file. This is bumped whenever the default
 # config changes to notify the administrator about updates.
@@ -117,6 +117,7 @@ keep_prefix=no
 
 client_prepare=@PREFIX@/libexec/pbulk/client-prepare
 client_prepare_action=@PREFIX@/libexec/pbulk/client-clean
+client_prepare_chroot=:
 pkg_up_to_date_script=@PREFIX@/libexec/pbulk/pkg-up-to-date
 pbuild_script=@PREFIX@/libexec/pbulk/pkg-build
 pbuild_start_script=@PREFIX@/libexec/pbulk/build-client-start
