--- a/chat/finch/Makefile
+++ b/chat/finch/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.65 2016/07/09 06:37:52 wiz Exp $
+# $NetBSD: Makefile,v 1.66 2016/12/18 23:33:11 joerg Exp $
 
 PKGNAME=	finch-${PIDGIN_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 
 COMMENT=	Multi-protocol Instant Messaging client console frontend
 
