--- a/net/wap-utils/Makefile
+++ b/net/wap-utils/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.26 2015/09/08 11:57:50 jperkin Exp $
+# $NetBSD: Makefile,v 1.27 2016/12/18 23:33:11 joerg Exp $
 #
 
 DISTNAME=	ap-utils-1.3.2
 PKGNAME=	w${DISTNAME}
-PKGREVISION=	9
+PKGREVISION=	10
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ap-utils/}
 EXTRACT_SUFX=	.tar.bz2
